--- a/docs/modules/ROOT/pages/usage.adoc
+++ b/docs/modules/ROOT/pages/usage.adoc
@@ -342,7 +342,7 @@ Peak Memory: 0B
 
 The cluster definition also supports overriding configuration properties and environment variables, either per role or per role group, where the more specific override (role group) has precedence over the less specific one (role).
 
-IMPORTANT: Overriding certain properties (such as `http-server.https.port`) which are set by operator can lead to faulty installations.
+IMPORTANT: Do not override port numbers. This will lead to faulty installations.
 
 === Configuration Properties
 
