--- a/docs/modules/ROOT/pages/usage.adoc
+++ b/docs/modules/ROOT/pages/usage.adoc
@@ -1,4 +1,4 @@
-= Usage
+/home/felix/repos/kafka-operator= Usage
 
 Trino works together with the Apache Hive metastore and S3 bucket.
 
@@ -65,11 +65,11 @@ htpasswd -nbBC 10 admin admin
 
 === Authorization
 
-In order to authorize Trino via OPA, a `ConfigMap` containing Rego rules for Trino has to be applied. The following example is an all access Rego rule for testing. Do not use that in production!
+In order to authorize Trino via OPA, a `ConfigMap` containing Rego rules for Trino has to be applied. The following example is an all access Rego rule for testing. Do not use it in production!
 
 [source,yaml]
 ----
-apiVersion: opa.stackable.tech/v1alpha1
+apiVersion: v1
 kind: ConfigMap
 metadata:
   name: opa-bundle-trino
