--- a/docs/modules/ROOT/pages/usage.adoc
+++ b/docs/modules/ROOT/pages/usage.adoc
@@ -65,11 +65,11 @@ htpasswd -nbBC 10 admin admin
 
 === Authorization
 
-In order to authorize Trino via OPA, a `ConfigMap` containing Rego rules for Trino has to be applied. The following example is an all access Rego rule for testing. Do not use that in production!
+In order to authorize Trino via OPA, a `ConfigMap` containing Rego rules for Trino has to be applied. The following example is an all access Rego rule for testing. Do not use it in production!
 
 [source,yaml]
 ----
-apiVersion: opa.stackable.tech/v1alpha1
+apiVersion: v1
 kind: ConfigMap
 metadata:
   name: opa-bundle-trino
@@ -106,27 +106,7 @@ data:
     can_view_query_owned_by = true
 ----
 
-You can let the Trino operator write its own Rego rules by configuring the `authorization` field in the custom resource. This is a rudimentary implementation for user access.
-
-[source,yaml]
-----
-authorization:
-  package: trino
-  permissions:
-    admin:
-      schemas:
-        read: true
-        write: true
-      tables:
-        iris_parquet:
-          read: true
-          write: true
-        iris_csv:
-          read: true
-          write: true
-----
-
-Here we define permissions for an admin user who can read and write `schemas`, as well as having full access to the `iris_parquet` and `iris_csv` table. Currently, this is more for demonstration purposes. Users should write their own rego rules for more complex OPA authorization.
+Users should write their own rego rules for more complex OPA authorization.
 
 === Trino
 
@@ -139,6 +119,7 @@ kubectl apply -f /etc/stackable/trino-operator/crd/trinocluster.crd.yaml
 ==== Insecure for testing:
 
 Create an insecure single node Trino (v362) cluster for testing. You will access the UI/CLI via http and no user / password or authorization is required. Please adapt the `s3` settings with your credentials (check `examples/simple-trino-cluster.yaml` for an example setting up Hive and Trino):
+
 [source,yaml]
 ----
 apiVersion: trino.stackable.tech/v1alpha1
@@ -191,31 +172,15 @@ metadata:
 spec:
   version: "0.0.362"
   hiveConfigMapName: simple-hive-derby
-  opaConfigMapName: simple-opa
+  opa:
+    configMapName: simple-opa
+    package: trino
   authentication:
     method:
       multiUser:
         userCredentialsSecret:
           namespace: default
           name: simple-trino-users-secret
-  authorization:
-    package: trino
-    permissions:
-      admin:
-        schemas:
-          read: true
-          write: true
-        tables:
-          iris_parquet:
-            read: true
-            write: true
-      bob:
-        schemas:
-          read: true
-          write: false
-        tables:
-          iris_parquet:
-            read: false
   s3:
     endPoint: changeme
     accessKey: changeme
