--- a/docs/modules/ROOT/pages/usage.adoc
+++ b/docs/modules/ROOT/pages/usage.adoc
@@ -113,7 +113,7 @@ kind: TrinoCluster
 metadata:
   name: simple-trino
 spec:
-  version: "0.0.377"
+  version: 377-stackable0
   hiveConfigMapName: simple-hive-derby
   s3:
     inline:
@@ -157,7 +157,7 @@ kind: TrinoCluster
 metadata:
   name: simple-trino
 spec:
-  version: "0.0.377"
+  version: 377-stackable0
   hiveConfigMapName: simple-hive-derby
   opa:
     configMapName: simple-opa
